Fix grid background alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,46 +60,12 @@
     @apply bg-background text-foreground;
   }
 } */
-.no-edit-grid {
-  /* background-image: radial-gradient(circle, #000000 1px, rgba(0, 0, 0, 0) 1px); */
-
-  background-color:rgba(255, 255, 255, 0);
-  background-image: linear-gradient(white 10px, transparent 10px),
-  linear-gradient(90deg, white 10px, transparent 10px);
-  background-size: 80px 80px, 114px 114px, 40px 40px, 40px 40px;
-  margin-top:16px;
-  margin-right:24px;
-  margin-left:97px;
-  height:96vh;
-
-  -webkit-transition: background-color 1000ms linear;
-  -ms-transition: background-color 1000ms linear;
-  transition: background-color 1000ms linear;
-}
-
-.edit-grid {
-  /* background-image: radial-gradient(circle, #000000 1px, rgba(0, 0, 0, 0) 1px); */
-
-  background-color:rgba(200, 227, 248, 0.303);
-  background-image: linear-gradient(white 10px, transparent 10px),
-  linear-gradient(90deg, white 10px, transparent 10px);
-  background-size: 80px 80px, calc(100%/12) calc(100%/12), 40px 40px, 40px 40px;
-  margin-top:16px;
-  margin-right:24px;
-  margin-left:96px;
-  height:96vh;
-
-  -webkit-transition: background-color 1000ms linear;
-  -ms-transition: background-color 1000ms linear;
-  transition: background-color 1000ms linear;
-}
 
 .react-grid-layout {
   position: relative;
   transition: height 200ms ease;
 }
 .react-grid-item {
-  padding:10px;
   border-color: lightgray;
   transition: all 200ms ease;
   transition-property: left, top, width, height;
@@ -133,12 +99,12 @@
   background: blue 20% 20%;
   opacity: 0.1;
   transition-duration: 200ms;
-  z-index: 2;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
+  pointer-events: none; /* Fixes event handlers not being called on inner components */
 }
 
 .react-grid-item.react-grid-placeholder.placeholder-resizing {
@@ -147,8 +113,9 @@
 
 .react-grid-item > .react-resizable-handle {
   position: absolute;
-  width: 20px;
-  height: 20px;
+  width: 36px;
+  height: 36px;
+  z-index: 10;
 }
 
 .react-grid-item > .react-resizable-handle::after {
